# os-autoinst

./: .gitignore  .hadolint.yaml  .mergify.yml  .perlcriticrc  .perltidyrc  .pre-commit-config.yaml  .tidyallrc  .travis.yml  .travis.yml.tmp  .yamlignore  .yamllint  AGENTS.md  CMakeLists.txt  COPYING  DEPENDENCIES.txt  Dockerfile  INSTALL  INSTALL.asciidoc  Makefile  Makefile.am  OpenQA  README  README.asciidoc  README.md  autogen.sh  autoinst-net.pl  autoinst-partitions.pl  autoinst-template.pl  autoinst-yast.pl  autoinst.pl  autoinstallstep.pm  autotest.pm  backend_qemu.pm  backend_vbox.pm  basenoupdate.pm  basetest.pm  bmwqemu.pm  bmwrpc.pm  check_needles.pl  check_qemu_oom  (+50 more)
.github/: checklist.yml
.obs/: workflows.yml
OpenQA/: Commands.pm  Exceptions.pm  Log.pm  NamedIOSelect.pm  OVS.pm
backend/: VNC.pm  amt.pm  baseclass.pm  component.pm  console_proxy.pm  driver.pm  generalhw.pm  hyperv.pm  ikvm.pm  ipmi.pm  kvm2usb.pm  null.pm  pvm.pm  pvm_hmc.pm  qemu.pm  s390x.pm  spvm.pm  ssh.pm  svirt.pm  svirt_impl.pm  vagrant.pm  vars.json.py  vbox.pm  virt.pm  virt_ssh.pm  vmware.pm  vnc_backend.pm
cmake/: pkg-config.cmake  test-targets.cmake  warnings.cmake
consoles/: VMWare.pm  VNC.pm  amtSol.pm  console.pm  icewm.cfg  ipmiSol.pm  localXvnc.pm  network_console.pm  remote-window.pm  remoteVnc.pm  remoteWindow.pm  s3270.pm  serial_screen.pm  ssh.pm  sshIucvconn.pm  sshSerial.pm  sshVirtsh.pm  sshVirtshSUT.pm  sshX3270.pm  sshXtermIPMI.pm  sshXtermVt.pm  ssh_console.pm  ssh_screen.pm  ttyConsole.pm  video_base.pm  video_stream.pm  virtio_screen.pm  virtio_terminal.pm  vnc_base.pm
consoletest.d/: 010_consoletest_setup.pm  145_aplay.pm  (+20 more)
debugviewer/: CMakeLists.txt  Makefile.am  debugviewer.cpp
ppmclibs/: .gitignore  CMakeLists.txt  Makefile  Makefile.PL  tinycv.cc  tinycv.h  tinycv.i  tinycv.pm  tinycv.xs  tinycv_ast2100.cc  tinycv_impl.cc  typemap
snd2png/: CMakeLists.txt  Makefile.am  snd2png.cpp  test.png.md5.original  test.pnm.md5.original  test_snd2png
systemd/: CMakeLists.txt  os-autoinst-openvswitch.service  os-autoinst-openvswitch.service.in
t/: .gitignore  00-compile-check-all.pl  00-compile-check-all.t  01-test_needle.pl  01-test_needle.t  02-test_ocr.pl  02-test_ocr.t  03-testapi.pl  03-testapi.t  04-check_vars_docu.pl  04-check_vars_docu.t  04-testapi-python.t  05-distribution.t  05-pod.t  06-pod-coverage.t  07-commands.pl  07-commands.t  08-autotest.pl  08-autotest.t  09-lockapi.t  09-terminal.t  10-terminal.t  10-test-image-conversion-benchmark.t  10-virtio_terminal.t  11-image-ppm.t  12-bmwqemu.t  12-log.t  13-osutils.t  14-debugging-tools.t  14-isotovideo.t  14-process.t  14-proxy.t  15-dnsserver.t  15-logging.t  16-components.t  16-send_with_fd.t  17-basetest.t  17-qemu.t  18-backend-ipmi.t  18-backend-qemu.t  (+71 more)
t/data/: README.md  accept-ssh-host-key.json  bootmenu-fail.ref.json  bootmenu-ocr.ref.json  bootmenu.ref.json  bootmenu.test.img-exclude.json  bootmenu.test.img-search_ratio.json  bootmenu.test.img.json  bootmenu.test.ocr-excludebottom.json  bootmenu.test.ocr-excludeleft.json  bootmenu.test.ocr-excludenooverlap.json  bootmenu.test.ocr-excluderight.json  bootmenu.test.ocr-excludesplithorizontal.json  bootmenu.test.ocr-excludesplitvertical.json  bootmenu.test.ocr-excludetop.json  bootmenu.test.ocr-fail.json  bootmenu.test.ocr-fullexclude.json  bootmenu.test.ocr-illegalrefstr.json  bootmenu.test.ocr-img-exclude.json  bootmenu.test.ocr-multiarea.json  bootmenu.test.ocr.json  confirmlicense-sle12.json  console.ref.json  desktop-at-first-boot-kde-without-greeter-20140926.json  desktop-runner-20140523.json  desktop_mainmenu-gnomesled-sles12.json  displaymanager-sle12.json  font-kerning.ref.json  frame1.ppm  frame2.ppm  glibc_i686.ref.json  incompleteframe.ppm  inst-rescuesystem-20141027.json  inst-video-typed-sles12b9.json  inst-welcome-20140902.json  inst-welcome.ref.json  instdetails.ref.json  kde-unselected-20141211.json  kde.ref.json  login_sddm.ref.imperfect.json  (+23 more)
t/data/assets/other/: 01377523-autoinst.xml  start.pm
t/data/empty_test_distribution/: main.pm
t/data/pool/: 01377524-autoinst.xml
t/data/tests/: foo.pm  main.pm  module1.pm
t/data/tests/bar/: baz.pm  module2.pm
t/data/tests/data/: autoinst.xml
t/data/tests/data/mod1/: test1.txt
t/data/tests/data/mod1/sub/: test2.txt
t/data/tests/lib/: luatestlib.lua  testdistribution.pm  testlib.pm
t/data/tests/luatests/: pre_boot_lua.lua  unittest_lua.lua
t/data/tests/needles/: activate.json  baudrate.json  boot-core.json  boot-on_prompt.json  keyboard_layout.json  minicom.json  no-importa-v1.json  no-importa-v2.json  pitux.json  prompt.json  tty_select.json
t/data/tests/pythontests/: pre_boot.py
t/data/tests/tests/: assert_screen.pm  assert_screen_fail_test.pm  boot.pm  create_snapshot.pm  fail_fast.pm  failing_module.pm  freeze.pm  modify_and_upload_file.pm  non_strict_module.pm  noop.pm  parameterized.pm  pre_boot.py  reload_needles.pm  save_storage.pm  select_console_fail_test.pm  select_ssh_console_fail2_test.pm  select_ssh_console_fail_test.pm  shutdown.pm  softfail_module.pm  typing.pm  unittest_lua.lua
t/data/tests/tests/bar/: baz.pm
t/data/wheels_dir/other/tests/: start.pm
t/fake/tests/: fatal.pm  faulty.py  ignore_failure.pm  important.pm  morepython.py  next.pm  pythontest.py  pythontest_with_bad_run_fn.py  pythontest_with_bad_runargs.py  pythontest_with_runargs.py  run_args.pm  scheduler.pm  start.pm  test.py
t/imgsearch/: expected-output.json
t/lib/: CoverageWorkaround.pm  bar.pm  broken.pm  foo.pm  foobar.pm
t/lib/OpenQA/Test/: CheckGitStatus.pm  Warnings.pm
t/lib/backend/component/: bar.pm  broken.pm  foo.pm  foobar.pm
t/lib/fuzz/: barfuzz.pm  broken.pm
t/misc_needles/: bootmenu.test.ocr-norefstr.json  check-workaround-bsc1234567-20190522.json  check-workaround-hash-mix-20190617.json  check-workaround-mix-bsc987321-20190617.json  click-point-center.json  click-point-multiple-ids.json  click-point-multiple-mixed-1.json  click-point-multiple-mixed-2.json  click-point-multiple.json  click-point.json  test_tag1.json  test_tag2.json  test_tag3.json
(+741 files in other folders)
