ACLOCAL_AMFLAGS = -I m4
SUBDIRS = t debugviewer snd2png
COVERAGE_THRESHOLD = 30.1

doc_DATA = \
	README.asciidoc \
	INSTALL.asciidoc \
	COPYING \
	doc/basetest.html \
	doc/testapi.html

backendexecdir = $(pkglibexecdir)/backend
backendexec_DATA = \
	backend/baseclass.pm \
	backend/console_proxy.pm \
	backend/driver.pm \
	backend/generalhw.pm \
	backend/ikvm.pm \
	backend/ipmi.pm \
	backend/qemu.pm \
	backend/s390x.pm \
	backend/svirt.pm \
	backend/pvm.pm \
	backend/virt.pm

consolesexecdir = $(pkglibexecdir)/consoles
consolesexec_DATA = \
	consoles/console.pm \
	consoles/icewm.cfg \
	consoles/ipmiSol.pm \
	consoles/localXvnc.pm \
	consoles/remoteVnc.pm \
	consoles/s3270.pm \
	consoles/sshX3270.pm \
	consoles/sshVirtsh.pm \
	consoles/sshIucvconn.pm \
	consoles/sshXtermIPMI.pm \
	consoles/sshXtermVt.pm \
	consoles/ttyConsole.pm \
	consoles/virtio_screen.pm \
	consoles/virtio_terminal.pm \
	consoles/vnc_base.pm \
	consoles/VNC.pm

openqaexecdir = $(pkglibexecdir)/OpenQA
openqaexec_DATA = \
	OpenQA/Commands.pm \
	OpenQA/Exceptions.pm

openqaexecbenchdir = $(pkglibexecdir)/OpenQA/Benchmark
openqaexecbench_DATA = \
	OpenQA/Benchmark/Stopwatch.pm

openqaexecrunargsdir = $(pkglibexecdir)/OpenQA/Test
openqaexecrunargs_DATA = \
    OpenQA/Test/RunArgs.pm

# circumvent automake's test - possibly we really shouldn't install in /usr/lib though
perlexecdir = $(pkglibexecdir)
perlexec_DATA = \
	autotest.pm \
	basetest.pm \
	bmwqemu.pm \
	testapi.pm \
	myjsonrpc.pm \
	mmapi.pm \
	lockapi.pm \
	commands.pm \
	distribution.pm \
	ocr.pm \
	cv.pm \
	needle.pm \
	osutils.pm

pkglibexec_SCRIPTS = \
	crop.py \
	os-autoinst-openvswitch

bin_SCRIPTS = isotovideo

install-exec-hook:
	sed -i -e "s,\$$installprefix = undef;,\$$installprefix = '$(pkglibexecdir)';," $(DESTDIR)$(bindir)/isotovideo && \
	sed -i -e "s,\$$sysdir = undef;,\$$sysdir = '$(pkglibexecdir)';," $(DESTDIR)$(pkglibexecdir)/cv.pm

pkglibexec_FOLDERS = \
	tools \
	inst \
	inst.d \
	dmidata

# sort the above out so it is not done directory wise

pkglibexec_PROGRAMS = videoencoder

videoencoder_SOURCES = videoencoder.cpp
videoencoder_CFLAGS = -O2 -Wall -W $(OPENCV_CFLAGS)
videoencoder_LDADD = $(OPENCV_LIBS) $(THEORAENC_LIBS) -lm

EXTRA_DIST = \
	autogen.sh \
	ppmclibs/tinycv.i \
	$(backendhelpexec_SCRIPTS) $(backendexec_SCRIPTS) \
	$(doc_DATA) $(pkglibexec_DATA) $(pkglibexec_SCRIPTS) $(packagestate_DATA_FOLDERS) $(pkglibexec_FOLDERS) \
	etc/dbus-1/system.d/org.opensuse.os_autoinst.switch.conf \
	systemd/os-autoinst-openvswitch.service

CLEANFILES = \
	$(ppmcexec_SCRIPTS) \
	ppmclibs/tinycv_wrap.cxx \
	doc/basetest.html \
	doc/testapi.html

PERL_MODULE = ppmclibs/blib/arch/auto/tinycv/tinycv.so
OPENVSWITCH_SERVICE = systemd/os-autoinst-openvswitch.service

ppmclibs/Makefile: ppmclibs/Makefile.PL
	cd ppmclibs && \
	perl Makefile.PL OPTIMIZE="$(CXXFLAGS)" CC="$(CXX)"

$(PERL_MODULE): ppmclibs/Makefile
	$(MAKE) -C ppmclibs

$(OPENVSWITCH_SERVICE):
	rm -f $@ $@.tmp
	sed -e 's,@pkglibexecdir[@],$(pkglibexecdir),g' '$(top_srcdir)/$@.in' > '$(top_srcdir)/$@.tmp'
	mv '$(top_srcdir)/$@.tmp' '$(top_srcdir)/$@'

install-exec-local: $(PERL_MODULE)
	$(MAKE) -C ppmclibs pure_install DESTDIR="$(DESTDIR)" INSTALLDIRS="$(INSTALLDIRS)"

all-local: $(PERL_MODULE)

doc/%.html: %.pm
	pod2html $< > $@

install-data-local: $(OPENVSWITCH_SERVICE)
	$(MKDIR_P) $(DESTDIR)/$(packagestatedir) ; \
	for i in $(packagestate_DATA_FOLDERS) ; do \
		cp -r $(top_srcdir)/$$i "$(DESTDIR)/$(packagestatedir)" ; \
	done
	$(MKDIR_P) "$(DESTDIR)/$(pkgdatadir)" ; \
	for i in $(pkglibexec_FOLDERS) ; do \
		cp -r $(top_srcdir)/$$i "$(DESTDIR)/$(pkglibexecdir)" ; \
	done
	install -D -m 644 $(top_srcdir)/etc/dbus-1/system.d/org.opensuse.os_autoinst.switch.conf "$(DESTDIR)/etc/dbus-1/system.d/org.opensuse.os_autoinst.switch.conf"
	install -D -m 644 "$(top_srcdir)/$(OPENVSWITCH_SERVICE)" "$(DESTDIR)/usr/lib/systemd/system/os-autoinst-openvswitch.service"

uninstall-local:
	for i in $(packagestate_DATA_FOLDERS) ; do \
		rm -rf "$(DESTDIR)/$(packagestatedir)/$$i" ; \
	done
	for i in $(pkglibexec_FOLDERS) ; do \
		rm -rf "$(DESTDIR)/$(pkglibexecdir)/$$i" ; \
	done

dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  $(top_srcdir)/missing --run git log ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		     echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi
	rm -rf `find $(distdir) -name .gitignore`

distclean-local: clean-local

check-local:
	$(srcdir)/tools/tidy --check
	PERL5LIB=tools/lib/perlcritic:$$PERL5LIB perlcritic --gentle --include Perl::Critic::Policy::HashKeyQuote --include Perl::Critic::Policy::ConsistentQuoteLikeWords $(srcdir)
	$(MAKE) check-doc

.PHONY: check-doc
check-doc: check-doc-testapi

.PHONY: check-doc-testapi
check-doc-testapi:
	[ -z "$$(podspell testapi.pm | spell)" ]

clean-local:
	@if test -e ppmclibs/Makefile; then $(MAKE) -C ppmclibs distclean; fi
	-rm -rf *.tar.*
	-rm -rf t/cover_db/

t/cover_db/: check

.PHONY: coverage-test
coverage-test: t/cover_db/

.PHONY: coverage
coverage: coverage-html

.PHONY: coverage-coveralls
coverage-coveralls: t/cover_db/
	(cd t && cover ${COVER_OPTS} -report coveralls)

t/cover_db/coverage.html: t/cover_db/
	(cd t && cover ${COVER_OPTS} -report html)

.PHONY: coverage-html
coverage-html: t/cover_db/coverage.html

.PHONY: coverage-check
coverage-check: t/cover_db/coverage.html
	(cd t && ../tools/check_coverage ${COVERAGE_THRESHOLD})

.PHONY: tidy-cpp
tidy-cpp:
	clang-format --style=WebKit -i $$(find . -name \*.cc -o -name \*.cpp)
